@@ -1240,7 +1240,7 @@ CHANNELS=\
 	GOSSIP,\
 	GRATZ,\
 	CHAT,\
-    OOC ACCOUNTOOC,\
+	OOC ACCOUNTOOC,\
 	QUESTCHAT PLAYERREADONLY, \
 	WIZ +SYSOP -NAMES, \
 	CLANTALK CLANONLY CLANINFO CONQUESTS LOGINS LOGOFFS, \
@@ -1689,6 +1689,14 @@ ACCMSGS=OFF
 # If you want to quickly turn off standard player races and/or classes and 
 # start building your own generic ones from scratch, you can expel them from 
 # character creation (but not from magical effects) with this.
+#
+# RACE_HALFELF, RACE_* 
+# If you want to quickly turn off access to a specific player race, simply
+# use RACE_ followed by the ID, in uppercase, of the Race class to disable.
+#
+# CHARCLASS_SKYWATCHER, CHARCLASS_* 
+# If you want to quickly turn off access to a specific player class, simply
+# use CHARCLASS_ followed by the ID, in uppercase, of the CharClass class to disable.
 #
 # CONNSPAMBLOCK
 # Disable the subsystem that prevents numerous mud connections from the
