@@ -57,7 +57,7 @@ public class RaceNext extends StdWebMacro
 		for(final Enumeration r=MobData.sortedRaces(httpReq);r.hasMoreElements();)
 		{
 			final Race R=(Race)r.nextElement();
-			if((CMProps.isTheme(R.availabilityCode())&&(!CMath.bset(R.availabilityCode(),Area.THEME_SKILLONLYMASK)))
+			if((CMLib.login().isAvailableRace(R))
 			||(parms.containsKey("ALL")))
 			{
 				if((last==null)||((last.length()>0)&&(last.equals(lastID))&&(!R.ID().equals(lastID))))
